//
//  ImageNames.swift
//  Created on 04/06/20.
//  Created for AnitaB.org Mentorship-iOS 
//

struct ImageNameConstants {
    static let mentorshipLogoImageName = "mentorship_system_logo"

    struct SFSymbolConstants {
        //tab icons
        static let home = "house.fill"
        static let relation = "command"
        static let members = "person.3.fill"
        static let settings = "gear"
        
        //relations list icons (on home screen)
        static let pending = "arrow.2.circlepath.circle.fill"
        static let accepted = "checkmark.circle.fill"
        static let rejected = "xmark.circle.fill"
        static let cancelled = "trash.circle.fill"
        static let completed = "archivebox.fill"
        
        //icons used on home screen
        static let taskDone = "checkmark"
        static let taskToDo = "circle"
        static let profileIcon = "person.crop.circle.fill"
        
        //settings icons
        static let about = "info.circle"
        static let feedback = "square.and.pencil"
        static let changePassword = "lock"
        static let logout = "power"
        static let deleteAccount = "trash"
        
        //dismiss sheet button icon
        static let xCircle = "x.circle.fill"
        
        // report violation icon
        static let reportComment = "exclamationmark.bubble"
        
    }
}
